# dune-hpdg

./: .gitlab-ci.yml  CMakeLists.txt  README.md  config.h.cmake  dune-hpdg.pc.in  dune.module
dune/hpdg/: CMakeLists.txt  dunefunctionsdiscretizationerror.hh
dune/hpdg/assemblers/: CMakeLists.txt  dgtocgnonconformingtransferassembler.hh  dgtocgtransferassembler.hh  dgtodggridtransferassembler.hh  dgtransferoperatorassembler.hh  gausslobattoipdgassembler.hh  lumpedmass.hh
dune/hpdg/assemblers/localassemblers/: CMakeLists.txt  dunefunctionssubgridl2functionalassembler.hh  dunefunctionsweightedlaplaceassembler.hh  gausslobattoipdgassembler.hh  gausslobattoipdgcoefficientassembler.hh  interiorpenaltydgassembler.hh  ipdgboundaryassembler.hh  variableipdg.hh  weightedfacemassassembler.hh  weightedipdg.hh  (+1 more)
dune/hpdg/buildingblocks/: CMakeLists.txt  details.hh  estimating.hh  matrices.hh  persistentbasis.hh  plot.hh  rhs.hh  solve.hh
dune/hpdg/common/: CMakeLists.txt  arraytotuple.hh  blockwiseoperations.hh  commandlineargs.hh  dynamicbcrs.hh  dynamicbvector.hh  dynamicbvector_specializations.hh  dynamicvectorwrapper.hh  indexedcache.hh  integertostring.hh  mappedcache.hh  matrixwindow.hh  mmmatrix.hh  mutablequadraturenodes.hh  resize.hh  resizehelper.hh  vectorwindow.hh
dune/hpdg/estimators/: CMakeLists.txt  hierarchicalestimator.hh  matrixfreehierarchical.hh  smoothnessindicator.hh  utility.hh
dune/hpdg/functionspacebases/: CMakeLists.txt  dgqkglbasis.hh  dynamicdgqkgausskronrodbasis.hh  dynamicdgqkgausslegendrebasis.hh  dynamicdgqkglbasis.hh  dynamicqknode.hh  globalbasis.hh  gridadaptor.hh  lagrangedgbasis.hh  lagrangedgblockbasis.hh  persistentgridviewdatatransfer.hh  qkglnodalbasis.hh
dune/hpdg/gridfunctions/: CMakeLists.txt  constantfunction.hh  discretepersistentbasisfunction.hh  simplederivative.hh  subgriddiscreteglobalbasisfunction.hh
dune/hpdg/iterationsteps/: CMakeLists.txt  coarsegrid.hh  dgmultigridstep.hh  dualdgmultigridstep.hh  dynamicblockgs.hh  facebasedschwarzsmoother.hh  l1projected.hh  l1smoother.hh  parmgsetup.hh  partnnmgstep.hh  solversetup.hh  solversetup_dgcg.hh
dune/hpdg/localfunctions/: CMakeLists.txt  assemblycache.hh  qkdglegendre.hh
dune/hpdg/matrix-free/: CMakeLists.txt  operator.hh
dune/hpdg/norms/: CMakeLists.txt  dynamicenergynorm.hh  dynamictwonorm.hh
dune/hpdg/parallel/: CMakeLists.txt  communicationhpdg.hh  updatedegrees.hh
dune/hpdg/test/: CMakeLists.txt  gridadaptortest.cc  randomvector.hh  test_arraytotuple.cc  test_blockwiseoperations.cc  test_caches.cc  test_commandlinept.cc  test_dgmultigridstep.cc  test_discretizationerror.cc  test_dynamicbasis.cc  test_dynamicbcrs.cc  test_dynamicblockgs.cc  test_gausskronrodrule.cc  test_geometricdgmultigrid.cc  test_indexedcache.cc  test_integertostring.cc  test_ipdg_assembler.cc  test_lumpedmass.cc  test_makedgtransfertuple.cc  test_mappedcache.cc  test_matrixwindow.cc  test_persistentgvdatatransfer.cc  test_solver_dgcg.cc  test_solversetup.cc  testestimatorutility.cc  testobjects.hh  utilities.hh
dune/hpdg/transferoperators/: CMakeLists.txt  arithmetic.hh  blocktransfer.hh  dgmultigridtransfer.hh  dgmultigridtransfermatrixfree.hh  dgq1toq1transfer.hh  dynamicblocktransfer.hh  dynamicordertransfer.hh  fulldomainindexsets.hh  makedgtransfertuple.hh  ordertransfer.hh
(+60 files in other folders)
