add_subdirectory("assemblers")
add_subdirectory("buildingblocks")
add_subdirectory("common")
add_subdirectory("estimators")
add_subdirectory("functionspacebases")
add_subdirectory("gridfunctions")
add_subdirectory("iterationsteps")
add_subdirectory("localfunctions")
add_subdirectory("matrix-free")
add_subdirectory("parallel")
add_subdirectory("test")
add_subdirectory("transferoperators")
install(FILES
  dunefunctionsdiscretizationerror.hh
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/hpdg)
