install(FILES
  gridadaptor.hh
  lagrangedgbasis.hh
  dgqkglbasis.hh
  qkglnodalbasis.hh
  lagrangedgblockbasis.hh
  dynamicdgqkglbasis.hh
  dynamicdgqkgausskronrodbasis.hh
  dynamicdgqkgausslegendrebasis.hh
  dynamicqknode.hh
  persistentgridview.hh
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/hpdg/functionspacebases)
