install(FILES
  dgqkglbasis.hh
  dynamicdgqkgausskronrodbasis.hh
  dynamicdgqkgausslegendrebasis.hh
  dynamicdgqkglbasis.hh
  dynamicqknode.hh
  gridadaptor.hh
  persistentgridview.hh
  persistentgridviewdatatransfer.hh
  qkglnodalbasis.hh
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/hpdg/functionspacebases)
